--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -1,17 +1,46 @@
 .navbar {
-    background-color: #333;
+    background-color:rgb(39, 39, 39) ;
     color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
+    height:50px;
+    position:sticky;
+    z-index: 100;
+    top:0;
 }
 
 .navbar-left {
     display: flex;
-    align-items: center;
+    align-items: left;
 }
 
+.navbar-center{
+    background:#333;
+    display: flex;
+    align-items: center;
+    border:1px solid black;
+    border-radius:25px;
+    padding: 0 15px;
+    width:550px;
+    height:40px;
+}
+
+.fa-magnifying-glass{
+    width:30px;
+    height:15px;
+}
+.navbar-center > .input{
+    background : transparent;  
+    padding : 10px;
+    margin-top:13px;
+    font-size:15px; 
+    width:100%;
+    outline:none;
+    border:0;
+    color:white;
+}
 .logo {
     width: 40px; /* Adjust the size as needed */
     height: auto;
@@ -32,7 +61,7 @@
 
 .navbar-right {
     display: flex;
-    align-items: center;
+    align-items: right;
 }
 
 .login-btn,
