--- a/home/home.css
+++ b/home/home.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+  
 }
 
 .web-container{
@@ -15,12 +15,11 @@ body {
 }
 
 .left-sidebar{
-    background: #cbdffa;
     flex-basis:25%;
     top:70px;
     align-self:flex-start;
-    margin-left:-40px;
-    height:100vh;
+    height: 100vh;
+    margin-top:1%;
 }
 
 
@@ -29,10 +28,66 @@ body {
     flex-basis:25%;
     top:70px;
     align-self:flex-start;
-    height:100vh;
-    margin-right:-40px;
+    margin-top:1%;
 }
 
 .main-content{
-    flex-basis:48%;
+    flex-basis:47%;
+}
+
+.fa-house {
+    width:40px;
+    height:30px;
+    font-size: 30px;
+    background: linear-gradient(to bottom, blue, lightblue);
+    -webkit-text-fill-color: transparent;
+    background-clip: text;    
+}
+  
+.fa-user{
+    width:40px;
+    height:30px;
+    font-size: 30px;
+    background: linear-gradient(to bottom, lightblue,rgb(224, 88, 190));
+    -webkit-text-fill-color: transparent;
+    background-clip: text; 
+}
+
+.fa-user-group{
+    width:40px;
+    height:30px;
+    font-size: 30px;
+    background: linear-gradient(to right, rgb(42, 45, 243) 10%, rgb(50, 226, 182) );
+    -webkit-text-fill-color: transparent;
+    background-clip: text; 
+}
+
+.fa-envelope{
+    width:40px;
+    height:30px;
+    font-size: 30px;
+    background: linear-gradient(to bottom, rgb(252, 255, 70), rgb(219, 164, 157));
+    -webkit-text-fill-color: transparent;
+    background-clip: text; 
+}
+
+.imp-links > a{
+    text-decoration:none ;
+    color:black;
+    font-size: 18px;
+    display:block;
+    align-items:center;
+    width:fit-content;
+    padding-bottom:5px;
+    padding-top: 5px;
+}
+
+.imp-links>a:hover{
+    background-color: #e0e0e0;
+    width:100%;
+    border-radius:5px;
+}
+
+.imp-links > a >i{
+   margin-right:15px;
 }
