--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -29,7 +29,7 @@
 
 .fa-magnifying-glass{
     width:30px;
-    height:15px;
+    height:16px;
 }
 .navbar-center > .input{
     background : transparent;  
@@ -48,7 +48,7 @@
 }
 
 .title {
-    margin: 0;
+    margin: 5px 0 0 0;
     font-size: 1.5em;
     color: white;
 }
