--- a/login/login.css
+++ b/login/login.css
@@ -6,22 +6,30 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f2f2f2;
+    /*background-color: #f2f2f2;*/
+    background:url(../.github/whisper-logo-bg0.jpg);
+    background-size:cover;
+    background-position: center;
+  
 }
 
 .login-container {
-    background-color: #ffffff;
+    background: transparent;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px #010407;
     max-width: 400px;
     width: 100%;
+    height: 350px;
     box-sizing: border-box;
+    border:1px solid black;
+    backdrop-filter: blur(20px);
 }
 
 h2 {
     text-align: center;
-    color: #333333;
+    /*color: #333333;*/
+    color:black;
 }
 
 .login-form {
@@ -31,15 +39,17 @@ h2 {
 
 label {
     margin-top: 10px;
-    color: #555555;
+   /* color: #555555;*/
+   color:black;
 }
 
 input {
     padding: 10px;
     margin: 5px 0;
-    border: 1px solid #cccccc;
+    border: 1px solid #008cff;
     border-radius: 4px;
     outline: none;
+    
 }
 
 input[type="submit"] {
@@ -47,7 +57,7 @@ input[type="submit"] {
     color: #ffffff;
     padding: 12px;
     margin-top: 15px;
-    border: none;
+    border: 1px solid black;
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
