--- a/signup/signup.css
+++ b/signup/signup.css
@@ -6,22 +6,27 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f2f2f2;
+    /*background-color: #f2f2f2;*/
+    background:url(../images/whisper-logo-bg3.jpg);
+    background-size:cover;
+    background-position: center;
 }
 
 .signup-container {
-    background-color: #ffffff;
+    background: transparent;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px #010407;
     max-width: 400px;
     width: 100%;
     box-sizing: border-box;
+    border:1px solid black;
+    backdrop-filter: blur(20px);
 }
 
 h2 {
     text-align: center;
-    color: #333333;
+    color: #000000;
 }
 
 .signup-form {
@@ -31,13 +36,13 @@ h2 {
 
 label {
     margin-top: 10px;
-    color: #555555;
+    color: #000000;
 }
 
 input {
     padding: 10px;
     margin: 5px 0;
-    border: 1px solid #cccccc;
+    border: 1px solid #008cff;
     border-radius: 4px;
     outline: none;
 }
