--- a/signup/style.css
+++ b/signup/style.css
@@ -6,41 +6,33 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    /*background-color: #f2f2f2;*/
-    background:url(../images/whisper-logo-bg3.jpg);
+    background-color: #f2f2f2;
     background-size:cover;
     background-position: center;
-  
 }
 
-.login-container {
-    background: transparent;
+.signup-container {
+    background: #ffffff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px #010407;
     max-width: 400px;
     width: 100%;
-    height: 350px;
-    box-sizing: border-box;
-    border:1px solid black;
-    backdrop-filter: blur(20px);
 }
 
 h2 {
     text-align: center;
-    /*color: #333333;*/
-    color:black;
+    color: #000000;
 }
 
-.login-form {
+.signup-form {
     display: flex;
     flex-direction: column;
 }
 
 label {
     margin-top: 10px;
-   /* color: #555555;*/
-   color:black;
+    color: #000000;
 }
 
 input {
@@ -49,7 +41,6 @@ input {
     border: 1px solid #008cff;
     border-radius: 4px;
     outline: none;
-    
 }
 
 input[type="submit"] {
@@ -57,7 +48,7 @@ input[type="submit"] {
     color: #ffffff;
     padding: 12px;
     margin-top: 15px;
-    border: 1px solid black;
+    border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
@@ -69,7 +60,7 @@ input[type="submit"]:hover {
 
 /* Responsive Styling */
 @media (max-width: 400px) {
-    .login-container {
+    .signup-container {
         max-width: 100%;
         box-shadow: none;
     }
