--- a/home/home.css
+++ b/home/home.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #efefef;
+    background-color: #f2f2f2;
     margin: 0;
     padding: 0;
     align-items: center;
