--- a/sidebar-left/style.css
+++ b/sidebar-left/style.css
@@ -1,20 +1,14 @@
-.logo-link {
-    display: flex;
-    align-items: left;
-}
-
 .logo {
     width: 40px;
-    height: auto;
-    margin-right: 10px;
+    height: 40px;
 }
 
-.title {
-    margin: 5px 0 0 0;
-    font-size: 1.5em;
+.logo:hover {
+    background-color: #e0e0e0;
+    border-radius: 5px;
 }
 
-.fa-house {
+.fa-home {
     width: 40px;
     height: 30px;
     font-size: 30px;
