--- a/profile/style.css
+++ b/profile/style.css
@@ -1,22 +1,10 @@
-#profile-container {
-    text-align: center;
+#profile-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-#profile-info .profile-picture {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    margin-bottom: 20px;
-}
-
-#profile-info .username {
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
-
-
-#edit-options button {
+#profile-edit-options button {
     margin: 5px;
     padding: 10px 20px;
     background-color: #007bff;
