--- a/sidebar-right/style.css
+++ b/sidebar-right/style.css
@@ -1,3 +1,12 @@
+.sidebar-right-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 4svw;
+    padding-left: 2svw;
+    padding-top: 2svh;
+}
+
 .search {
     background: #FFF;
     display: flex;
