--- a/bottom-left/style.css
+++ b/bottom-left/style.css
@@ -1,32 +1,25 @@
-.bottom-container {
+#bottom-left-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
+    margin-bottom: 1svh;
 }
 
-.bottom-container-buttons {
+#bottom-left-profile-container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     align-items: center;
-    margin-top: 5px;
-    margin-bottom: 5px;
 }
 
-.login-btn,
-.logout-btn,
-.signup-btn {
-    text-decoration: none;
-    color: #fff;
-    padding: 10px 15px;
-    margin: 10px;
-    border-radius: 5px;
-    background-color: #007bff;
+
+#bottom-left-buttons-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
-.login-btn:hover,
-.logout-btn:hover,
-.signup-btn:hover {
-    background-color: #0056b3;
+#bottom-left-buttons-login,
+#bottom-left-buttons-signup,
+#bottom-left-buttons-logout {
+    margin-right: 10px;
 }
