--- a/profile/style.css
+++ b/profile/style.css
@@ -1,22 +1,32 @@
-#profile-container {
-    text-align: center;
+#profile-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-#profile-info .profile-picture {
+#profile-container-large {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 12px;
+    margin-top: 12px;
+}
+
+#profile-container-large-picture {
     width: 150px;
     height: 150px;
     border-radius: 50%;
     margin-bottom: 20px;
 }
 
-#profile-info .username {
+#profile-container-large-username {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 20px;
 }
 
-
-#edit-options button {
+#profile-edit-options button {
     margin: 5px;
     padding: 10px 20px;
     background-color: #007bff;
