--- a/create-post/style.css
+++ b/create-post/style.css
@@ -7,11 +7,11 @@
     border-bottom: 1px solid var(--whisper-border);
 }
 
-#createPostTextAreaPart1 {
+#createPostContainerPart1 {
     margin-right: 12px;
 }
 
-#createPostTextAreaPart2 {
+#createPostContainerPart2 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -24,9 +24,11 @@
     width: 100%;
 } */
 
-.createPostContainer textarea {
+#createPostTextArea {
     width: 100%;
+    height: auto;
     font-size: 20px;
+    word-wrap: break-word;
     border: none;
     outline: none;
     margin-bottom: 12px;
@@ -60,4 +62,5 @@
 .createPostContainer .image-preview,
 .createPostContainer .video-preview {
     max-width: 100%;
+    border-radius: 16px;
 }
