--- a/edit_profile/style.css
+++ b/edit_profile/style.css
@@ -1,6 +1,9 @@
-.container {
-    max-width: 600px;
+#editProfileContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     margin: 50px auto;
+    align-items: center;
 }
 
 #cropper-container {
@@ -33,7 +36,7 @@
 }
 
 /* Styling the file input */
-input[type="file"] {
+#inputImage {
     display: inline-block;
     padding: 10px 15px;
     font-size: 16px;
@@ -45,7 +48,7 @@ input[type="file"] {
     transition: background-color 0.3s ease;
 }
 
-input[type="file"]:hover {
+#inputImage:hover {
     background-color: #45a049; /* Darker green on hover */
 }
 
