--- a/profile/style.css
+++ b/profile/style.css
@@ -26,7 +26,7 @@
     margin-bottom: 20px;
 }
 
-#profile-edit-options button {
+#profile-update-options button {
     margin: 5px;
     padding: 10px 20px;
     background-color: #007bff;
