--- a/sidebar-left/style.css
+++ b/sidebar-left/style.css
@@ -22,11 +22,15 @@
 .imp-links>a {
     text-decoration: none;
     color: black;
-    font-size: 20px;
+    font-size: var(--whisper-font-size-large);
     display: block;
     align-items: center;
     width: fit-content;
     padding: 16px 16px;
+}
+
+.imp-links h2 {
+    display: inline-block;
 }
 
 .imp-links>a:hover {
