--- a/signup/style.css
+++ b/signup/style.css
@@ -1,71 +1,62 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f2f2f2;
-    background-size:cover;
-    background-position: center;
-}
-
-.signup-container {
-    background: #ffffff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px #010407;
-    max-width: 400px;
-    width: 100%;
-}
-
-h2 {
-    text-align: center;
-    color: #000000;
-}
-
-.signup-form {
+#signup-container {
     display: flex;
     flex-direction: column;
+    align-self: center;
+    width: 100%;
+    height: 100svh;
 }
 
-label {
-    margin-top: 10px;
-    color: #000000;
-}
-
-input {
-    padding: 10px;
-    margin: 5px 0;
-    border: 1px solid #008cff;
-    border-radius: 4px;
-    outline: none;
-}
-
-input[type="submit"] {
-    background-color: #4caf50;
-    color: #ffffff;
+#signup-topbar-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     padding: 12px;
-    margin-top: 15px;
-    border: none;
-    border-radius: 4px;
+    top: 0px;
+    position: sticky;
+    border-bottom: 1px solid var(--whisper-border);
+    background-color: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(10px);
+}
+
+
+#signup-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+    width: 100%;
+    padding: 0px 24px;
+}
+
+#signup-form h2 {
+    margin-top: 24px;
+    margin-bottom:  14px;
+}
+
+#signup-form input[type="text"],
+#signup-form input[type="password"],
+#signup-form input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+#signup-form input[type="submit"] {
+    background-color: #007bff;
+    color: #fff;
     cursor: pointer;
-    font-size: 16px;
 }
 
-input[type="submit"]:hover {
-    background-color: #45a049;
+#signup-form input[type="submit"]:hover {
+    background-color: #0056b3;
 }
 
-/* Responsive Styling */
-@media (max-width: 400px) {
-    .signup-container {
-        max-width: 100%;
-        box-shadow: none;
-    }
-
-    input[type="submit"] {
-        width: 100%;
-    }
+#signup-form .error {
+    color: red;
+    margin-bottom: 10px;
 }
