--- a/signup/style.css
+++ b/signup/style.css
@@ -1,16 +1,14 @@
 #signup-container {
     display: flex;
     flex-direction: column;
-    align-self: center;
+    align-self: flex-start;
     width: 100%;
-    height: 100svh;
 }
 
 #signup-topbar-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
     width: 100%;
     padding: 12px;
     top: 0px;
@@ -20,12 +18,9 @@
     backdrop-filter: blur(10px);
 }
 
-
 #signup-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    align-self: center;
     width: 100%;
     padding: 0px 24px;
 }
