--- a/styles/all-classes.css
+++ b/styles/all-classes.css
@@ -54,10 +54,9 @@ h2 {
     flex: 0 0 600px !important;
     max-width: 600px !important;
     width: 600px !important;
-    top: 0px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .right-sidebar {
