alerts changes and login page change

--- a/create_post/style.css
+++ b/create_post/style.css
@@ -59,6 +59,15 @@
     margin-top: 12px;
 }
 
+#createPostButtonsStart {
+    display: flex;
+}
+
+#createPostButtonsStart .btn {
+    display: flex;
+    margin-right: 4px;
+}
+
 #createPostButtons .fa-image {
     margin-right: 10px;
 }
