--- a/create_post/style.css
+++ b/create_post/style.css
@@ -56,7 +56,7 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
-    margin-top: 12px;
+    /* margin-top: 12px; */
 }
 
 #createPostButtonsStart {
