--- a/update_username/style.css
+++ b/update_username/style.css
@@ -1,5 +1,5 @@
 #updateUsernameContainer {
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     width: 100%;
