--- a/create_post/style.css
+++ b/create_post/style.css
@@ -55,7 +55,7 @@
 #createPostButtons {
     display: flex;
     width: 100%;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     /* margin-top: 12px; */
 }
 
