--- a/styles/all-classes.css
+++ b/styles/all-classes.css
@@ -11,8 +11,11 @@ body {
     --whisper-font-size: 16px;
     --whisper-font-size-large: 20px;
     --whisper-background: #FFF;
-    font-family: "Segoe UI", "Helvetica Neue", Arial, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: var(--whisper-background);
+    overflow-y: scroll;
+    overflow-x: auto;
+    scrollbar-width: thin;
     scrollbar-color: rgb(185, 202, 211) rgb(247, 249, 249);
 }
 
