Button css chnage

--- a/profile/style.css
+++ b/profile/style.css
@@ -29,3 +29,12 @@
     text-align: center;
 }
 
+#profile-update-options {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+#profile-update-options .btn {
+    margin: 0px 4px;
+}
