--- a/update_username/style.css
+++ b/update_username/style.css
@@ -28,8 +28,7 @@
 }
 
 /* Button styles */
-#updateUsernameForm button[type="submit"] {
+#updateUsernameForm .btn {
     width: 100%;
-    cursor: pointer;
 }
 
