--- a/styles/all-classes.css
+++ b/styles/all-classes.css
@@ -33,22 +33,22 @@ h2 {
 }
 
 .left-sidebar {
-    flex: 0 0 326px !important;
-    max-width: 326px !important;
-    width: 1024px !important;
+    flex: 0 0 300px !important;
+    max-width: 300px !important;
+    width: 300px !important;
     top: 0px;
     height: 100svh;
     position: sticky;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
     border-right: 1px solid var(--whisper-border);
 }
 
 .main-content {
-    flex: 0 0 1000px !important;
-    max-width: 1000px !important;
-    width: 1000px !important;
+    flex: 0 0 1026px !important;
+    max-width: 1026px !important;
+    width: 1026px !important;
     display: flex;
     align-items: flex-start;
 }
@@ -63,9 +63,9 @@ h2 {
 }
 
 .right-sidebar {
-    flex: 0 0 400px !important;
-    max-width: 400px !important;
-    width: 400px !important;
+    flex: 0 0 426px !important;
+    max-width: 426px !important;
+    width: 426px !important;
     top: 0px;
     height: 100svh;
     position: sticky;
