--- a/whisper/sidebar-left/style.css
+++ b/whisper/sidebar-left/style.css
@@ -3,13 +3,12 @@
 }
 
 .sidebar-container {
-    align-self: flex-end;
     flex: 0 0 100% !important;
-    width: 275px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding-left: 8px;
+    padding-left: 33px;
     padding-right: 8px;
 }
 
@@ -48,4 +47,6 @@ nav a.active {
 
 .bottom-left {
     align-self: flex-start;
+    margin-bottom: 36px;
+    margin-left: 12px;
 }
