--- a/whisper/posts/style.css
+++ b/whisper/posts/style.css
@@ -13,10 +13,6 @@
     border-bottom: 1px solid var(--whisper-border);
 }
 
-#displayPostContainerPart2 h2 {
-    font-size: var(--whisper-font-size);
-}
-
 #displayPostContainerPart2 p {
     max-width: 500px;
     white-space: pre-line;
@@ -93,4 +89,5 @@
 #displayPostMediaPreview .video-preview {
     max-height: 500px;
     border-radius: 16px;
+    border: 1px solid rgb(207, 217, 222);
 }
