--- a/whisper/posts/style.css
+++ b/whisper/posts/style.css
@@ -8,9 +8,14 @@
     display: flex;
     align-items: flex-start;
     width: 100%;
-    background-color: #fff;
     padding: 12px;
     border-bottom: 1px solid var(--whisper-border);
+}
+
+
+.displayPostContainer:hover {
+    background-color: #f7f7f7;
+    transition: background-color 200ms ease-in-out;
 }
 
 #displayPostContainerPart2 p {
@@ -33,7 +38,6 @@
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
-    background-color: #fff;
     margin-top: 4px;
 }
 
@@ -53,7 +57,8 @@
 }
 
 #displayPostTextArea::selection {
-    background-color: #b3d4fc; /* Change caret color here */
+    background-color: #b3d4fc;
+    /* Change caret color here */
 }
 
 .displayPostContainer input[type="file"] {
