--- a/whisper/sidebar-right/style.css
+++ b/whisper/sidebar-right/style.css
@@ -1,10 +1,11 @@
 .sidebar-right-container {
     display: flex;
+    width: 100%;
     flex-direction: column;
     align-items: center;
-    padding-right: 4svw;
-    padding-left: 2svw;
-    padding-top: 2svh;
+    padding-right: 36px;
+    padding-left: 36px;
+    padding-top: 4px;
 }
 
 .search {
