--- a/whisper/posts/style.css
+++ b/whisper/posts/style.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    border-top: 1px solid var(--whisper-border);
 }
 
 .displayPostContainer {
