--- a/whisper/update_profile/style.css
+++ b/whisper/update_profile/style.css
@@ -2,8 +2,8 @@
     display: none;
     flex-direction: column;
     width: 100%;
-    margin: 50px auto;
     align-items: center;
+    padding-top: 4px;
 }
 
 #cropper-container {
