--- a/whisper/update_username/style.css
+++ b/whisper/update_username/style.css
@@ -9,7 +9,8 @@
 #updateUsernameForm {
     width: 100%;
     margin: 0 auto;
-    padding: 20px;
+    padding: 0px 20px;
+    margin-top: 12px;
 }
 
 /* Label styles */
