--- a/styles/all-classes.css
+++ b/styles/all-classes.css
@@ -163,3 +163,13 @@ input[type="checkbox"]:checked + label .fas {
 /* .username_link.active {
     color: black;
 } */
+
+.profileButtonsContainer {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.profileButtonsContainer .btn {
+    margin: 0px 4px;
+}
